--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 systems and software</p>
 						<p>Troubleshoot problems, escalate complex issues when necessary, and ensure efficient resolution to minimize
 downtime and enhance user productivity. </p>
-						<span class="school">Andulkadir Kure University, Minna, Niger State, Nigeria.</span>
+						<span class="school">Abdulkadir Kure University, Minna, Niger State, Nigeria.</span>
 					</div>
 					
 					<div class="resume-item mb-4">
