--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> January 2025 - Present.</span>
 						<h3>Data Analyst</h3>
-						<p>Analyze seminar registration and attendance data to track student and organization participation.</p>
+						<p>Analyzed seminar registration and attendance data to track student and organization participation.</p>
 						<p>Built a dashboard to visualize online vs offline registration and identity low-performing departments.</p>
 						<span class="school">Abdulkadir Kure University, Niger State, Nigeria.</span>
 					</div>
@@ -205,9 +205,9 @@
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> January 2025 - Present.</span>
 						<h3>IT Support</h3>
-						<p>Provides frontline support by responding to user inquiries, technical issues, and service requests related to IT
+						<p>Provide frontline support by responding to user inquiries, technical issues, and service requests related to IT
 systems and software</p>
-						<p>Troubleshoot problems, escalate complex issues when necessary, and ensure efficient resolution to minimize
+						<p>Troubleshooting problems, escalate complex issues when necessary, and ensure efficient resolution to minimize
 downtime and enhance user productivity. </p>
 						<span class="school">Abdulkadir Kure University, Minna, Niger State, Nigeria.</span>
 					</div>
@@ -215,8 +215,8 @@ downtime and enhance user productivity. </p>
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span>August 2024- Present.</span>
 						<h3>Remote Operation Specialist</h3>
-						<p>Monitored student records, schedules, and departmental activities for efficiency and accuracy..</p>
-						<p>Supported strategic planning and process improvements to enhance institutional performance.</p>
+						<p>Monitoring student records, schedules, and departmental activities for efficiency and accuracy..</p>
+						<p>Supporting strategic planning and process improvements to enhance institutional performance.</p>
 						<span class="school">Crown Institute of Technology, Lagos, Nigeria.</span>
 					</div>
 
@@ -224,9 +224,9 @@ downtime and enhance user productivity. </p>
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> January 2025- April 2025.</span>
 						<h3>Remote Data Analyst</h3>
-						<p>Analyze sales, purchase, and inventory data to support restaurant operations.</p>
+						<p>Analyzed sales, purchase, and inventory data to support restaurant operations.</p>
 						<p>Built reports and dashboards to track stock, suppliers, and customer trends</p>
-						<p>Provides insights that improved cost control and efficiency</p>
+						<p>Provided insights that improved cost control and efficiency</p>
 						<span class="school">Munch Cloud restaurant, Lagos, Nigeria.</span>
 					</div>
 
@@ -240,7 +240,7 @@ downtime and enhance user productivity. </p>
 						<span class="date"><span class="icon-calendar"></span>February 2024</span>
 						<h3>Bachelor of Science in Biochemistry</h3>
 						<p>Graduated with strong academic performance and a solid background in biochemical processes, laboratory techniques, and scientific research</p>
-						<p>P<strong>Final Year Project:</strong> Investigated the antioxidant vitamins and minerals present in different infant formulas, using five samples to analyze their nutritional composition and compare their effectiveness in supporting infant health.</p>
+						<p><strong>Final Year Project:</strong> Investigated the antioxidant vitamins and minerals present in different infant formulas, using five samples to analyze their nutritional composition and compare their effectiveness in supporting infant health.</p>
 						<span class="school">Usmanu Danfodiyo University, Sokoto, Nigeria</span>
 					</div>
 					
