--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 						<h3>IT Support</h3>
 						<p>Provide frontline support by responding to user inquiries, technical issues, and service requests related to IT
 systems and software</p>
-						<p>Troubleshooting problems, escalate complex issues when necessary, and ensure efficient resolution to minimize
+						<p>Troubleshooting problems, escalating complex issues when necessary, and ensure efficient resolution to minimize
 downtime and enhance user productivity. </p>
 						<span class="school">Abdulkadir Kure University, Minna, Niger State, Nigeria.</span>
 					</div>
